Map coordinate script and waypoints

--- a/website/game.html
+++ b/website/game.html
@@ -21,8 +21,9 @@
 <div class="gameBox">
     <div class="outsideImageWrap">
         <div class="insideImageWrap">
-            <img src="img/map_main.png" alt="Game map" class="mapImage">
+
             <canvas id="gameCanvas" width="1920" height="900"></canvas>
+            <img src="img/map_main.png" alt="Game map" class="mapImage">
         </div>
     </div>
 </div>
@@ -38,6 +39,8 @@
         </footer>
     </div>
 </section>
+
+<script type="text/javascript" src="js/game.js"></script>
 
 </body>
 </html>
