fetch and char card update
CORS hell was upon me

--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Cinzel+Decorative&display=swap" rel="stylesheet">
     <title>GoT Journey</title>
     <meta name="Description" content="Game Of Thrones: Journey To Castle Black - Home">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -32,75 +32,35 @@
         </div>
 
         <div class="characterContainer">
-            <div id="charStark" class="characterCard">
+            <div id="char0" class="characterCard">
                 <img src="img/playerselect_stark.png" alt="Player select for Ned Stark" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charLannister" class="characterCard">
+            <div id="char1" class="characterCard">
                 <img src="img/playerselect_lannister.png" alt="Player select for Jaime Lannister" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charTargaryen" class="characterCard">
+            <div id="char2" class="characterCard">
                 <img src="img/playerselect_targaryen.png" alt="Player select for Daenerys Targaryen" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charClegane" class="characterCard">
+            <div id="char3" class="characterCard">
                 <img src="img/playerselect_clegane.png" alt="Player select for Sandor Clegane" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charBaelish" class="characterCard">
+            <div id="char4" class="characterCard">
                 <img src="img/playerselect_baelish.png" alt="Player select for Petyr Baelish" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charTyrell" class="characterCard">
+            <div id="char5" class="characterCard">
                 <img src="img/playerselect_tyrell.png" alt="Player select for Margaery Tyrell" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charGreyjoy" class="characterCard">
+            <div id="char6" class="characterCard">
                 <img src="img/playerselect_greyjoy.png" alt="Player select for Theon Greyjoy" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charArryn" class="characterCard">
+            <div id="char7" class="characterCard">
                 <img src="img/playerselect_arryn.png" alt="Player select for Jon Arryn" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charMormont" class="characterCard">
+            <div id="char8" class="characterCard">
                 <img src="img/playerselect_mormont.png" alt="Player select for Jeor Mormont" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
-            <div id="charBaratheon" class="characterCard">
+            <div id="char9" class="characterCard">
                 <img src="img/playerselect_baratheon.png" alt="Player select for Robert Baratheon" class="responsiveImage playerSelectImg">
-                <p class="charInfo">GENDER: </p>
-                <p class="charInfo">BORN: </p>
-                <p class="charInfo">CULTURE: </p>
-                <p class="charInfo">ALIAS: </p>
             </div>
         </div>
 
@@ -109,6 +69,6 @@
         </footer>
     </div>
 </section>
-
+<script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
