frontpage and charselect

--- a/website/index.html
+++ b/website/index.html
@@ -26,14 +26,14 @@
 
         <h1 class="selectHeader">SELECT YOUR CHARACTER</h1>
         <div class="buttonContainer">
-            <img src="img/btn_selectplayer_one.png" alt="Select player one button" class="responsiveImage buttonImage">
-            <img src="img/btn_selectplayer_two.png" alt="Select player two button" class="responsiveImage buttonImage">
-            <img src="img/btn_startgame.png" alt="start game button" class="responsiveImage buttonImage">
+            <img src="img/btn_selectplayer_one.png" alt="Select player one button" class="responsiveImage buttonImage buttonSelected" id="player1button">
+            <img src="img/btn_selectplayer_two.png" alt="Select player two button" class="responsiveImage buttonImage buttonUnselected" id="player2button">
+            <img src="img/btn_startgame.png" alt="start game button" class="responsiveImage buttonImage buttonUnselected" id="startGameButton">
         </div>
 
         <div class="characterContainer">
             <div id="char0" class="characterCard">
-                <img src="img/playerselect_stark.png" alt="Player select for Ned Stark" class="responsiveImage playerSelectImg">
+                <img src="img/playerselect_stark.png" alt="Player select for Ned Stark" class="responsiveImage playerSelectImg ">
             </div>
             <div id="char1" class="characterCard">
                 <img src="img/playerselect_lannister.png" alt="Player select for Jaime Lannister" class="responsiveImage playerSelectImg">
