--- a/website/winner.html
+++ b/website/winner.html
@@ -17,12 +17,15 @@
 </section>
 
 <div class="gameBox">
-    <div class="outsideImageWrapWin">
-        <div class="insideImageWrapWin">
+    <div class="outsideImageWrap">
+        <div class="insideImageWrap">
             <canvas id="winCanvas" width="1920" height="900">Your browser does not support the HTML5 canvas tag.</canvas>
             <div class="winImageBox">
                 <div class="canvasCont">
                      <img src="img/logo.png" alt="Logo for Game of thrones: Journey to castle black" class="winImage">
+                </div>
+                <div class="canvasCont">
+                    <img src="" alt="Logo for Game of thrones: Journey to castle black" id="winImageToken">
                 </div>
                 <div class="canvasCont">
                     <h1 id="winnerText"></h1>
